pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec__066-atx_headings.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 159
expression: "replace_system_specific_urls(render_to_string(markdown_file,\n&iterm2_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/066-atx_headings.md
---
]1337;SetMark\[1m[34m┄[0m[1m[34mfoo [0m[1m[3m[34mbar[0m[1m[34m [0m[1m[34m*baz[0m[1m[34m*[0m
